convert to specify PopupObject type

--- a/TitleTip-test.html
+++ b/TitleTip-test.html
@@ -6,7 +6,8 @@
 <script type="text/javascript" src="TitleTips.js"></script>
 <style type="text/css">
 * {font-family:sans-serif;}
-.titletip-node {
+
+.titletip {
 	position:absolute;
 	border:1px solid #CCC;
 	padding:.2em 1em;
