--- a/OSXBar-test.html
+++ b/OSXBar-test.html
@@ -2,9 +2,12 @@
 <head>
 	<title>OSX Bar test</title>
 	<script type="text/javascript" src="IEtoW3C.js"></script>
+	<script type="text/javascript" src="PopupObject.js"></script><!-- submenu popup based on this class -->
 	<script type="text/javascript" src="OSXBar.js"></script>
+	
 	<style type="text/css">
 	* {font-size:12px; font-family:Arial,sans-serif;}
+	/*
 	#item-1 {list-style-image:url(assets/icon.gif);}
 	#item-2 {list-style-image:url(assets/icon.gif);}
 	#item-3 {list-style-image:url(assets/icon.gif);}
@@ -13,28 +16,97 @@
 	#item-6 {list-style-image:url(assets/icon.gif);}
 	#item-7 {list-style-image:url(assets/icon.gif);}
 	#item-8 {list-style-image:url(assets/icon.gif);}
+	*/
+	li {list-style-image:url(assets/icon.gif);}
 	li li {list-style-image:none;}
+	
+	.osx-bar {background:#F0F0F0; border:1px solid #9F9F9F; margin:0; padding:0;}
+	.osx-bar-popup-label {white-space:nowrap; width:200px; margin-top:1em;}
+	.osx-bar-popup-submenu {background:#FEFEFE; border:1px solid #999; border-top:0; width:100px; margin-left:1em; margin-top:1em; padding:0; padding-bottom:.1em;}
+		.osx-bar-popup-submenu-label {font-weight:bold; border:1px solid #999; border-right:0; margin:0 0 .1em -1em; padding:.2em .5em .2em 1.5em; background:#EEE;}
+		.osx-bar-popup-submenu ul, .osx-bar-popup-submenu li {display:block; margin:0; padding:0;}
+		.osx-bar-popup-submenu :link, .osx-bar-popup-submenu :visited {display:block; padding:.2em .5em; color:#000; text-decoration:none;}
+		.osx-bar-popup-submenu :link:hover, .osx-bar-popup-submenu :visited:hover {background:#EEE;}
 	</style>
+	
+	<script type="text/javascript">
+	window.addEventListener("load",function(){
+		new OSXBar(document.getElementById("bottom-bar"),"bottom");
+		new OSXBar(document.getElementById("right-bar"),"right",16,48,4,4);
+		new OSXBar(document.getElementById("top-bar"),"top",24,96,32,4);
+	},false);
+	</script>
 </head>
 <body>
 
-	<ul class="OSX-bar">
-		<li id="item-1"><a href="">Label 1</a></li>
-		<li id="item-2">Label 2
+	<ul class="osx-bar">
+		<li><a href="http://lojjic.net">Label 1</a></li><!-- linked label -->
+		<li>Label 2 <!-- text label with child menu -->
 			<ul>
-				<li>Submenu</li>
-				<li>Submenu</li>
-				<li>Submenu</li>
+				<li><a href="">Submenu</a></li>
+				<li><a href="">Submenu</a></li>
+				<li><a href="">Submenu</a></li>
 			</ul>
 		</li>
-		<li id="item-3"><span/>Label 3</li>
-		<li id="item-4"><span/><a href="">Label 4</a></li>
-		<li id="item-5"><a href="">Label 5</a></li>
-		<li id="item-6"><a href="">Label 6</a></li>
-		<li id="item-7"><a href="">Label 7</a></li>
-		<li id="item-8"><a href="">Label 8</a></li>
-		
+		<li><span></span>Label 3<!-- empty element before text label -->
+			<ul>
+				<li><a href="">Submenu</a></li>
+				<li><a href="">Submenu</a></li>
+				<li><a href="">Submenu</a></li>
+			</ul>
+		</li>
+		<li><span></span><a href="TitleTips-test.html">Label 4</a></li><!-- empty element before linked label -->
+		<li><a href="#">Label 5</a></li>
+		<li><a href="#">Label 6</a></li>
+		<li>Label 7
+			<ul>
+				<li><a href="">Submenu</a></li>
+				<li><a href="">Submenu</a></li>
+				<li><a href="">Submenu</a></li>
+			</ul>
+		</li>
+		<li><a href="#">Label 8</a></li>
 	</ul>
-	
+
+	<ul id="bottom-bar">
+		<li><a href="#">Label 1</a></li>
+		<li><a href="#">Label 2</a></li>
+		<li><a href="#">Label 3</a></li>
+		<li><a href="#">Label 4</a></li>
+		<li><a href="#">Label 5</a></li>
+		<li><a href="#">Label 6</a></li>
+		<li><a href="#">Label 7</a></li>
+		<li><a href="#">Label 8</a></li>
+		<li><a href="#">Label 9</a></li>
+		<li><a href="#">Label 10</a></li>
+		<li><a href="#">Label 11</a></li>
+		<li><a href="#">Label 12</a></li>
+		<li><a href="#">Label 13</a></li>
+		<li><a href="#">Label 14</a></li>
+		<li><a href="#">Label 15</a></li>
+	</ul>
+
+	<ul id="right-bar">
+		<li><a href="#">Label 1</a></li>
+		<li><a href="#">Label 2</a></li>
+		<li><a href="#">Label 3</a></li>
+		<li><a href="#">Label 4</a></li>
+		<li><a href="#">Label 5</a></li>
+		<li><a href="#">Label 6</a></li>
+		<li><a href="#">Label 7</a></li>
+		<li><a href="#">Label 8</a></li>
+		<li><a href="#">Label 9</a></li>
+		<li><a href="#">Label 10</a></li>
+	</ul>
+
+	<ul id="top-bar">
+		<li><a href="#">Label 1</a></li>
+		<li><a href="#">Label 2</a></li>
+		<li><a href="#">Label 3</a></li>
+		<li><a href="#">Label 4</a></li>
+		<li><a href="#">Label 5</a></li>
+	</ul>
+
+		
 </body>
 </html>
