--- a/OSXBar-test.html
+++ b/OSXBar-test.html
@@ -57,7 +57,7 @@
 		</li>
 		<li><a href="#">Label 8</a></li>
 	</ul>
-
+	
 	<ul id="bottom-bar">
 		<li><a href="#">Label 1</a></li>
 		<li>Label 2
@@ -114,6 +114,67 @@
 		<li><a href="#">Label 4</a></li>
 		<li><a href="#">Label 5</a></li>
 	</ul>
+
+		
+	
+	<form id="updateForm" onsubmit="updateOSXBarParams(); return false;">
+		<style type="text/css">
+			#updateForm {margin:10em;}
+			#updateForm th {text-align:right;}
+		</style>
+		<script type="text/javascript">
+			function updateOSXBarParams() {
+				var bars = OSXBar.instances; 
+				function v(id) {
+					return parseInt(document.getElementById(id).value);
+				}
+				for(var i=0; i<bars.length; i++) {
+					//bars[i].edge=document.getElementById("edge").value;
+					bars[i].iconMaxSize=v("maxsize");
+					bars[i].iconMinSize=v("minsize");
+					bars[i].iconSpacing=v("spacing");
+					bars[i].scaleReach =v("smoothness");
+					bars[i].onUnscale();
+				}
+			}
+		</script>
+		<table>
+		<!--
+		<tr>
+			<th>Edge of Window:</th>
+			<td>
+				<select id="edge">
+				<option>left</option>
+				<option>bottom</option>
+				<option>right</option>
+				<option>top</option>
+				</select>
+			</td>
+		</tr>
+		-->
+		<tr>
+			<th>Minimum Icon Size:</th>
+			<td><input type="text" size="3" id="minsize" value="32"> pixels</td>
+		</tr>
+		<tr>
+			<th>Maximum Icon Size:</th>
+			<td><input type="text" size="3" id="maxsize" value="48"> pixels</td>
+		</tr>
+		<tr>
+			<th>Icon Spacing:</th>
+			<td><input type="text" size="3" id="spacing" value="8"> pixels</td>
+		</tr>
+		<tr>
+			<th>Scaling Curve Smoothness:</th>
+			<td><input type="text" size="3" id="smoothness" value="6"> (bigger number is smoother curve)</td>
+		</tr>
+		<tr>
+			<th></th>
+			<td><input type="submit" value="Update"></td>
+		</tr>
+		</table>
+	</div>
+	
 
 		
 </body>
