Change icon to a real 48x48 one

--- a/OSXBar-test.html
+++ b/OSXBar-test.html
@@ -7,7 +7,7 @@
 	
 	<style type="text/css">
 	* {font-size:12px; font-family:Arial,sans-serif;}
-	li {list-style-image:url(assets/icon.gif);}
+	li {list-style-image:url(assets/icon-48x48.png);}
 	li li {list-style-image:none;}
 	
 	.osx-bar {background:#F0F0F0; border:1px solid #9F9F9F; margin:0; padding:0;}
