Change to use IEtoW3C-loader.js

--- a/ThrowableObject-test.html
+++ b/ThrowableObject-test.html
@@ -3,7 +3,7 @@
 	<title>throwable objects</title>
 
 
-	<script type="text/javascript" src="IEtoW3C.js"></script>
+	<script type="text/javascript" src="IEtoW3C-loader.js"></script>
 	<script type="text/javascript" src="ThrowableObject.js"></script>
 	<script type="text/javascript">
 
