--- a/accesskeys-test.html
+++ b/accesskeys-test.html
@@ -2,7 +2,7 @@
 <head>
 	<title>test page for accesskey underlining</title>
 
-	<script language="JavaScript" src="IEtoW3C.js"></script>
+	<script language="JavaScript" src="IEtoW3C-loader.js"></script>
 	<script language="JavaScript" src="accesskeys.js"></script>
 
 	<style type="text/css">
