--- a/autoFormatFields-test.html
+++ b/autoFormatFields-test.html
@@ -2,7 +2,7 @@
 <head>
 	<title>test page for field auto-formatting</title>
 
-	<script language="JavaScript" src="IEtoW3C.js"></script>
+	<script language="JavaScript" src="IEtoW3C-loader.js"></script>
 	<script language="JavaScript" src="autoFormatFields.js"></script>
 
 </head>
