--- a/sortableTables-test.html
+++ b/sortableTables-test.html
@@ -16,7 +16,7 @@ th:active {border:1px inset #CCC;}
 
 </style>
 
-<script type="text/javascript" src="IEtoW3C.js"></script>
+<script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="sortableTables.js"></script>
 
 </head>
