--- a/DateUtils-test.html
+++ b/DateUtils-test.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<script type="text/javascript" src="IEtoW3C.js"></script>
+<script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="DateUtils.js"></script>
 <script type="text/javascript">
 	function onForm1Submitted(evt) {
