--- a/OSXBar-test.html
+++ b/OSXBar-test.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>OSX Bar test</title>
-	<script type="text/javascript" src="IEtoW3C.js"></script>
+	<script type="text/javascript" src="IEtoW3C-loader.js"></script>
 	<script type="text/javascript" src="PopupObject.js"></script><!-- submenu popup based on this class -->
 	<script type="text/javascript" src="OSXBar.js"></script>
 	
