--- a/PopupObject-types-test.html
+++ b/PopupObject-types-test.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<script type="text/javascript" src="IEtoW3C.js"></script>
+<script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="PopupObject.js"></script>
 <script type="text/javascript" src="TitleTips.js"></script>
 <script type="text/javascript">
