Move CSS from testcases into separate .css files

--- a/AccessKey-test.html
+++ b/AccessKey-test.html
@@ -8,9 +8,7 @@
 			window.addEventListener("load",AccessKey.enableScriptSheet,false);
 	</script>
 
-	<style type="text/css">
-	em.accesskey {font-style:normal; font-weight:bold; border-bottom:1px dotted;}
-	</style>
+	<link rel="stylesheet" type="text/css" href="AccessKey.css" />
 
 </head>
 
