--- a/OSXBar-test.html
+++ b/OSXBar-test.html
@@ -8,18 +8,10 @@
 		window.addEventListener("load",OSXBar.enableScriptSheet,false);
 	</script>
 	
+	<link rel="stylesheet" type="text/css" href="OSXBar.css" />
+	
 	<style type="text/css">
 	* {font-size:12px; font-family:Arial,sans-serif;}
-	li {list-style-image:url(assets/icon-48x48.png);}
-	li li {list-style-image:none;}
-	
-	.osx-bar {background:#F0F0F0; border:1px solid #9F9F9F; margin:0; padding:0;}
-	.osx-bar-popup-label {white-space:nowrap; /*apply margin to align with icon*/}
-	.osx-bar-popup-submenu {background:#FEFEFE; border:1px solid #999; margin:0; padding:0; padding-bottom:.1em;}
-		.osx-bar-popup-submenu-label {font-weight:bold; border-bottom:1px solid #999; margin:0; padding:.2em .5em; background:#EEE;}
-		.osx-bar-popup-submenu ul, .osx-bar-popup-submenu li {display:block; margin:0; padding:0;}
-		.osx-bar-popup-submenu :link, .osx-bar-popup-submenu :visited {display:block; padding:.2em .5em; color:#000; text-decoration:none;}
-		.osx-bar-popup-submenu :link:hover, .osx-bar-popup-submenu :visited:hover {background:#EEE;}
 	</style>
 	
 
