Rename to SortableTableColumn in preparation for making object-oriented

--- a/SortableTableColumn-test.html
+++ b/SortableTableColumn-test.html
@@ -17,7 +17,11 @@ th:active {border:1px inset #CCC;}
 </style>
 
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
-<script type="text/javascript" src="sortableTables.js"></script>
+<script type="text/javascript" src="SortableTableColumn.js"></script>
+<script type="text/javascript">
+	window.addEventListener("load",SortableTableColumn.enableScriptSheet,false);
+</script>
+
 
 </head>
 <body>
