Make object-oriented and add (initial) support for running as ScriptSheet

--- a/SortableTableColumn-test.html
+++ b/SortableTableColumn-test.html
@@ -10,9 +10,9 @@ th {background-color:#CCC;border:1px outset #CCC;}
 th:active {border:1px inset #CCC;}
 
 
-.sortable {background:#CCC no-repeat 100% 50%;}
-.sorted-up {background-image:url(assets/sort_arrow_up.gif);}
-.sorted-down {background-image:url(assets/sort_arrow_down.gif);}
+th.sortable {background:#CCC no-repeat 100% 50%;}
+th.sortable-table-column-sorted-up {background-image:url(assets/sort_arrow_up.gif);}
+th.sortable-table-column-sorted-down {background-image:url(assets/sort_arrow_down.gif);}
 
 </style>
 
