Use external TitleTips.css

--- a/PopupObject-types-test.html
+++ b/PopupObject-types-test.html
@@ -45,15 +45,9 @@ PopupTypeTwo.prototype.buildContents = function() {
 .popup-type-two {border:1px solid; background:#CCC; padding:3em;}
 
 button {display:block;}
-
-.titletip {
-	position:absolute;
-	border:1px solid #CCC;
-	padding:.2em 1em;
-	background:#DEF;
-	font-size:smaller;
-}
 </style>
+<link rel="stylesheet" type="text/css" href="TitleTips.css" />
+
 </head>
 
 <body>
