--- a/PopupCalendar-test.html
+++ b/PopupCalendar-test.html
@@ -4,6 +4,9 @@
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="PopupObject.js"></script>
 <script type="text/javascript" src="PopupCalendar.js"></script>
+<script type="text/javascript">
+	window.addEventListener("load", PopupCalendar.enableScriptSheet, false);
+</script>
 
 <link rel="stylesheet" type="text/css" href="PopupCalendar.css" />
 
@@ -12,7 +15,14 @@
 <body>
 
 	<h1>Test Popup Calendar Widget:</h1>
-	<p>The field below just has <code>class="date"</code> on it. The JavaScript hooks up the calendar button automatically.</p>
+	
+	<p>
+		The PopupCalendar script runs as a <a href="ScriptSheet.js" title="Framework for applying scripts as styles and switching between them">ScriptSheet</a>.
+		<button onclick="PopupCalendar.disableScriptSheet()">Disable ScriptSheet</button> 
+		<button onclick="PopupCalendar.enableScriptSheet()">Enable ScriptSheet</button>
+	</p>
+	
+	<p>The field below just has <code>class="date"</code> on it. The script hooks up the calendar button automatically.</p>
 
 	<p><input type="text" size="10" maxlength="10" class="date"></p>
 
