--- a/TitleTip-test.html
+++ b/TitleTip-test.html
@@ -1,9 +1,13 @@
 <html>
 <head>
-
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="PopupObject.js"></script>
 <script type="text/javascript" src="TitleTips.js"></script>
+<script type="text/javascript">
+	window.addEventListener("load", TitleTip.enableScriptSheet, false);
+</script>
+
+<link rel="stylesheet" type="text/css" href="TitleTips.css" />
 <style type="text/css">
 * {font-family:sans-serif;}
 p {border:1px solid #CCC; padding:.5em;}
@@ -12,6 +16,14 @@ acronym {border-bottom:1px dotted;}
 </head>
 
 <body>
+
+<h1>Test Title Tips</h1>
+
+<p>
+	The TitleTip script runs as a <a href="ScriptSheet.js" title="Framework for applying scripts as styles and switching between them">ScriptSheet</a>.
+	<button onclick="TitleTip.disableScriptSheet()">Disable ScriptSheet</button> 
+	<button onclick="TitleTip.enableScriptSheet()">Enable ScriptSheet</button>
+</p>
 
 <p>
 	This is a bunch of text blah blah blah.  This
