--- a/PopupObject-types-test.html
+++ b/PopupObject-types-test.html
@@ -3,7 +3,7 @@
 
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="PopupObject.js"></script>
-<script type="text/javascript" src="TitleTips.js"></script>
+<script type="text/javascript" src="TitleTip.js"></script>
 <script type="text/javascript">
 
 function PopupTypeOne(evt) {
