--- a/ScriptSheet-test.html
+++ b/ScriptSheet-test.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="OSXBar.js"></script>
 <script type="text/javascript" src="TreeMenu.js"></script>
 <script type="text/javascript" src="AccessKey.js"></script>
+<script type="text/javascript" src="TitleTip.js"></script>
 
 <link rel="scriptsheet" type="text/javascript" href="OSXBar.js#OSXBar" title="Mac OS X Dock" />
 <link rel="stylesheet" type="text/css" href="OSXBar.css" title="Mac OS X Dock" />
@@ -21,6 +22,10 @@
 
 <link rel="alternate scriptsheet" type="text/javascript" href="TreeMenu.js#TreeMenu" title="Tree Menu, no accesskeys" />
 <link rel="alternate stylesheet" type="text/css" href="TreeMenu.css" title="Tree Menu, no accesskeys" />
+
+<!-- always applied: -->
+<link rel="scriptsheet" type="text/javascript" href="TitleTip.js#TitleTip" />
+<link rel="stylesheet" type="text/css" href="TitleTip.css" />
 
 
 </head>
