--- a/TitleTip-test.html
+++ b/TitleTip-test.html
@@ -2,7 +2,7 @@
 <head>
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="PopupObject.js"></script>
-<script type="text/javascript" src="TitleTips.js"></script>
+<script type="text/javascript" src="TitleTip.js"></script>
 <script type="text/javascript">
 	window.addEventListener("load", TitleTip.enableScriptSheet, false);
 </script>
