--- a/ColorPicker-test.html
+++ b/ColorPicker-test.html
@@ -3,12 +3,14 @@
 
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="PopupObject.js"></script>
+<script type="text/javascript" src="TitleTip.js"></script>
 <script type="text/javascript" src="ColorPicker.js"></script>
 <script type="text/javascript">
 	window.addEventListener("load", ColorPicker.enableScriptSheet, false);
 </script>
 
 <link rel="stylesheet" type="text/css" href="ColorPicker.css" />
+<link rel="stylesheet" type="text/css" href="TitleTip.css" />
 
 </head>
 
