change stylesheet reference to renamed value

--- a/TitleTip-test.html
+++ b/TitleTip-test.html
@@ -7,7 +7,7 @@
 	window.addEventListener("load", TitleTip.enableScriptSheet, false);
 </script>
 
-<link rel="stylesheet" type="text/css" href="TitleTips.css" />
+<link rel="stylesheet" type="text/css" href="TitleTip.css" />
 <style type="text/css">
 * {font-family:sans-serif;}
 p {border:1px solid #CCC; padding:.5em;}
